--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -28,6 +28,9 @@
         <pointsize>11</pointsize>
        </font>
       </property>
+      <property name="acceptRichText">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
    </layout>
