--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -18,6 +18,9 @@
   <property name="windowTitle">
    <string>geen</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
@@ -38,7 +41,7 @@
      <x>0</x>
      <y>0</y>
      <width>982</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
