a few little things

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -16,7 +16,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>geen</string>
+   <string>Geen</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
